// DECLARES THE INTERFACE THAT IS EXPECTED BY HSS
// MAKE SURE YOU KEEP THIS FILE IN SYNC BETWEEN HSS AND SIM_MANAGER

syntax = "proto3";

option go_package = "pb/gen/simmgr";

package ukama.sim_manager.v1;

import "validator.proto";
import "google/protobuf/wrappers.proto";


service SimManagerService {
    // Get status of Data, Voice, SMS sevices(enabeld/disabled) for a sim
    rpc GetSimStatus(GetSimStatusRequest) returns (GetSimStatusResponse);

    // Enable or disable Data, Voice, SMS services for a sim
    rpc SetServiceStatus(SetServiceStatusRequest) returns (SetServiceStatusResponse);

    // GetSimInfo returns an IMSI for an ICCID
    rpc GetSimInfo(GetSimInfoRequest) returns (GetSimInfoResponse);

    // Terminates sim card permanently
    rpc TerminateSim(TerminateSimRequest) returns (TerminateSimResponse);

    // Get usage data for a sim card
    rpc GetUsage(GetUsageRequest) returns (GetUsageResponse);

    // Get qr code to install esim
    rpc GetQrCode(GetQrCodeRequest) returns (GetQrCodeResponse);
}

message ActivateSimRequest {
    string user_id = 1;
}

message ActivateSimResponse{}

message GetSimStatusRequest {
    string iccid = 1 [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message GetSimStatusResponse {
    enum Status {
        UNKNOWN = 0;
        INACTIVE = 1;
        ACTIVE = 2;
        TERMINATED = 3;
    }

    Status status = 1;
    Services services = 2;
}

message Services {
    google.protobuf.BoolValue voice = 1;
    google.protobuf.BoolValue data = 2;
    google.protobuf.BoolValue sms = 3;
}

message GetSimInfoRequest {
    string iccid = 1 [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message GetSimInfoResponse {
    string iccid = 1;
    string imsi = 2;
}

message SetServiceStatusRequest {
    string iccid = 1;
    Services services = 2 [(validator.field) =  {msg_exists : true}] ;
}

message SetServiceStatusResponse{

}

message TerminateSimRequest {
    string iccid = 1  [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message TerminateSimResponse{
}

message GetUsageRequest{
    string iccid = 1  [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message GetUsageResponse {
    int64 DataUsageInBytes  = 1;
    int64 DataTotalInBytes  = 2;
}

message GetQrCodeRequest{
    string iccid = 1  [(validator.field) = {regex: "^[0-9]{18,19}$"}];
}

message GetQrCodeResponse{
    string qr_code = 1;
}
